# simple_python_package

./: .gitignore  README.md  data.json  five.py  fourth.py  fourth2.py  main.py  pyproject.toml  requirements.txt  second.py  setup.py  third.py
src/kube/: kube_monitor.py
