[project]
name = "IntroPython"
version = "0.0.1"
authors = [
  { name="Halil Agin", email="halil.agin@gmail.com" },
  { name="Kadir Mutlu", email="kadirmutlu@gmail.com" },
]
description = "Intro python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
